--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "framer-motion": "^12.33.0",
+    "lenis": "^1.3.17",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.1.6",
     "next": "16.1.6",
+    "openai": "^6.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
